5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4192/executions/1582_1326.log
== TEST (2019-03-14 16:09:13) 
-- CODE:
22
-- ERROR:
File "XXXX", line 1
    print(250/6)round(250, 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:09:18) 
-- CODE:
22
-- EXECUTION TIME:
0.160019
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:09:23) 
-- CODE:
22
-- EXECUTION TIME:
0.147374
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:10:31) 
-- CODE:
22
-- EXECUTION TIME:
0.233695
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:10:33) 
-- CODE:
22
-- ERROR:
File "XXXX", line 1
    print(250/6)round(250, 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:10:43) 
-- CODE:
22
-- EXECUTION TIME:
0.152771
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:13:55) 
-- CODE:
22
-- EXECUTION TIME:
0.188006
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:13:56) 
-- CODE:
22
-- ERROR:
File "XXXX", line 1
    print(250/6)round(250, 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:14:01) 
-- CODE:
22
-- ERROR:
File "XXXX", line 1
    print(250/6)round(250, 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:14:02) 
-- CODE:
22
-- EXECUTION TIME:
0.153368
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 13:07:21) 
-- CODE:
print 40+35

-- EXECUTION TIME:
0.18244
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print 40+35
           ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 13:07:21) 
-- CODE:
print 40+35

-- EXECUTION TIME:
0.135944
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print 40+35
           ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 13:07:22) 
-- CODE:
print 40+35

-- EXECUTION TIME:
0.102969
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print 40+35
           ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 13:07:35) 
-- CODE:
print (40+35)


-- EXECUTION TIME:
0.142118
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:07:36) 
-- CODE:
print (40+35)


-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:07:36) 
-- CODE:
print (40+35)


-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:07:36) 
-- CODE:
print (40+35)


-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:07:36) 
-- CODE:
print (40+35)


-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 13:07:55) 
-- CODE:
print (40+35)


-- EXECUTION TIME:
0.277211
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
